# cql-python

./: .readthedocs.yml  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
.vendoring/: vendor.txt
.vendoring/patches/: ply-LICENSE.patch
src/cql/: __init__.py  lexer.py  parser.py
src/cql/_vendor/ply/: LICENSE
tests/: conftest.py  test_init.py  test_parser_cqlstandard.py  test_parser_errors.py  test_parser_queries.py  test_toCQL.py  test_toXCQL.py
tests/regression/: README.md  test_regression.py
