[bdist_wheel]
universal = 1

[metadata]
name = cql-parser
version = 0.1
author = Erik Körner
author_email = "Erik Körner" <koerner@saw-leipzig.de>
description = "CQL (Contextual Query Language) Parser"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: YACC
    Topic :: Text Processing :: General
    Topic :: Utilities

[options]
zip_safe = True
include_package_data = True
package_dir =
    =src
packages = cql
python_requires = >=3.8
install_requires =
    ply @ git+https://github.com/dabeaz/ply.git

[options.package_data]
cql =
    py.typed

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-clarity
    pytest-randomly
style =
    black
    flake8
    isort
    mypy
build =
    build
    twine

[flake8]
max-line-length = 140
exclude = venv,dist
docstring-convention = numpy
per-file-ignores =
    setup.py:D
    tests/*:S,D,RST,F401,F841
    __main__.py:E,F

[darglint]
docstring_style = numpy

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = cql
default_section = THIRDPARTY
forced_separate = test_cql
skip = venv,dist

[tool:pytest]
addopts =
    -ra
    -vv
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
    --cov
    ;--cov-report=term-missing
python_files =
    test_*.py
    *_test.py
    tests.py
testpaths =
    tests
