[bdist_wheel]
universal = 1

[metadata]
name = cql-parser
version = 1.0.1
author = Erik Körner
author_email = "Erik Körner" <koerner@saw-leipzig.de>
description = "CQL (Contextual Query Language) Parser"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: YACC
    Topic :: Text Processing :: General
    Topic :: Utilities
keywords =
    CQL
    CLARIN
    Query Parser
url = https://github.com/Querela/cql-python/
project_urls =
    Source = https://github.com/Querela/cql-python/
    Issue Tracker = https://github.com/Querela/cql-python/issues

[options]
zip_safe = True
include_package_data = True
package_dir =
    =src
packages = cql
python_requires = >=3.8

[options.package_data]
cql =
    py.typed

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-clarity
    pytest-randomly
style =
    black
    flake8
    isort
    mypy
vendor =
    vendoring
build =
    build
    twine

[flake8]
max-line-length = 140
exclude = venv,dist,src/cql/_vendor
docstring-convention = google
per-file-ignores =
    setup.py:D
    tests/*:S,D,RST,F401,F841
    __main__.py:E,F

[darglint]
docstring_style = google

[mypy]
exclude = (?x)(
    ^examples/
    | ^venv/
    | ^docs/
    | ^tests/
    | ^setup.py$
    | ^src/cql/_vendor/
  )
[mypy-ply]
ignore_missing_imports = True
[mypy-ply.lex]
ignore_missing_imports = True
[mypy-ply.yacc]
ignore_missing_imports = True

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = cql
default_section = THIRDPARTY
forced_separate = test_cql
skip = venv,dist,src/cql/_vendor

[tool:pytest]
addopts =
    -ra
    -vv
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
    --cov
    ;--cov-report=term-missing
python_files =
    test_*.py
    *_test.py
    tests.py
testpaths =
    tests

; black is configured in the pyproject.toml file
